# forour-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  appspec.yml  docker-compose.yml  pyproject.toml  requirements.txt
.circleci/: config.yml  workflow.yml
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: __init__.py  anniversary.py  answer.py  deps.py  question.py  result.py
app/core/: __init__.py  config.py
app/crud/: __init__.py  anniversary.py  answer.py  base.py  question.py  result.py
app/database/: __init__.py  session.py
app/middlewares/: __init__.py  cors.py
app/models/: __init__.py  anniversary.py  answer.py  question.py  result.py  user.py
app/schemas/: __init__.py  question.py  response.py
app/schemas/anniversary/: __init__.py  crud.py  response.py
app/schemas/answer/: __init__.py  crud.py
app/schemas/question/: __init__.py  crud.py  response.py
app/schemas/result/: __init__.py  crud.py  response.py
migrations/: env.py
migrations/versions/: 391bad150fcf_create_answer_table.py  9ba95cad337e_create_question_table.py
scripts/: deploy_source  start_server  stop_server  update_source
src/: main.py
src/api/: __init__.py  anniversary.py  question.py  result.py
src/core/: config.py
src/crud/: __init__.py  anniversary.py  base.py  question.py  result.py
src/schema/: __init__.py  response.py
src/schema/anniversary/: __init__.py  crud.py
src/schema/question/: __init__.py  crud.py
src/schema/response_example/: __init__.py  create.py  delete.py  (+1 more)
src/util/: __init__.py  parser.py
(+14 files in other folders)
